<resources>
    <string name="app_name">RED-LAB SUR</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="register_text">Registrar</string>
    <string name="failed_credentials">Las credenciales no son válidas</string>
    <string name="no_password_entered">Por favor ingrese una contraseña</string>
    <string name="no_email_entered">Por favor ingrese un email</string>

    <!-- Strings related to information fetching -->
    <string name="methodology_fetch_error">Hubo un error al obtener las metodologías</string>

    <!-- Strings related to menus -->
    <string name="my_methodologies_menu">Mis metodologías</string>
    <string name="all_methodologies_menu">Ver metodologías</string>
    <string name="to_implementation_book">Ir a librillo</string>
    <string name="sessions_separator_menu">Sesión</string>
    <string name="logout_menu">Cerrar sesión</string>

    <!-- String for menu headers -->
    <string name="my_methodologies_header">Mis Metodologías</string>

    <!-- String for the user methodology view -->
    <string name="empty_methodologies">No tienes ninguna metodología</string>

    <string name="hello_blank_fragment">Dummy</string>

    <!-- Strings for API text -->
    <string name="main_api_url">https://red-lab-sur.herokuapp.com/</string>
    <string name="auth_api_url">sessions</string>
    <string name="url_follows">follows/</string>
    <string name="url_planning">/planning/</string>
    <string name="url_work_roles">/work_roles/</string>
    <string name="url_methodologies">methodologies/</string>
    <string name="sp_user_id">user_id</string>
    <string name="sp_token">token</string>
    <string name="sp_db_name">redlabsur</string>
    <string name="user_methodology_api_url">follows/</string>
    <string name="user_methodology_condition_url">/condition/</string>
    <string name="user_methodology_broadcast_url">/broadcast/</string>
    <string name="user_methodology_resource_url">/resource/</string>
    <string name="user_methodology_binnacle_url">/binnacle/</string>
    <string name="user_methodology_evaluation_url">/evaluation/</string>
    <string name="user_methodology_report_url">/report/</string>
    <string name="url_step">/step/</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings for methodology buttons -->
    <string name="planificate">Plan</string>
    <string name="implementate">Impl</string>
    <string name="evaluate">Eval</string>
    <string name="communicate">Com</string>
    <string name="addMeth">Agregar</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuración</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_stage_planification">Planificar</string>
</resources>
