<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_methodologies"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/my_methodologies_menu" />
        <item
            android:id="@+id/all_methodologies"
            android:icon="@drawable/ic_people_outline_black_24dp"
            android:title="@string/all_methodologies_menu" />
        <item
            android:id="@+id/to_implementation_book"
            android:icon="@mipmap/ic_to_book"
            android:title="@string/to_implementation_book" />
    </group>

    <item android:title="@string/sessions_separator_menu">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_vpn_key_black_24dp"
                android:title="@string/logout_menu" />
        </menu>
    </item>

</menu>
